# autonomous-contract-analyzer

./: README.md
one/: .gitignore  README.md  pyproject.toml
one/src/: generate_test_contract.py  image_parser.py  main.py  models.py
one/src/agents/: contextualization_agent.py  extraction_agent.py
one/tests/: test_agents.py  test_validation.py
