[project]
name = "autonomous-contract-comparison-system"
version = "0.1.0"
description = "Autonomous Contract Comparison System using GPT-models & Multi-Agent AI Extract changes from contract amendments with 95%+ accuracy. Multi-modal parsing + collaborative agents + Langfuse observability."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.1.3",
    "langchain-openai>=1.1.2",
    "langfuse>=3.10.5",
    "openai>=2.11.0",
    "pdf2image>=1.17.0",
    "pytest>=9.0.2",
    "reportlab>=4.4.6",
    "rich>=14.2.0",
]
